# rk3588

./: Makefile  README.md
rknn-demo/: CMakeLists.txt  README.md  build-linux.sh  build-rk3588.sh  dual_residual.onnx  dual_residual_custom.rknn  dual_residual_input_0.npy  dual_residual_input_1.npy  rt_output0.npy  rt_output1.npy  run-demo.sh  run.sh
rknn-demo/include/cnpy/: cnpy.cpp  cnpy.h
rknn-demo/include/stb/: stb_image_write.h
rknn-demo/reverse/: CMakeLists.txt  meson.build  reverse.c
rknn-demo/reverse2/: meson.build  reverse2.c
rknn-demo/reverse2/include/: instrs.h  rknpu-ioctl.h
rknn-demo/src/: convert.py  generate_pytorch_custom_op_model.py  load_model.py  rknn_api_test_custom_cpu_op dup.cpp  rknn_api_test_custom_cpu_op.cpp  rknn_api_test_custom_pytorch_op.cpp  rknn_create_mem_demo.cpp
rknn-dump/: README.md
rknn-dump/rknn_init_mobilenet/: log
rknn-dump/rknn_reverse_engineering/: log
rknn-reg/add/: CMakeLists.txt  Makefile  add.cpp  add.onnx  add.py  add.rknn  build_and_run.sh
rknn-sniff/: README.md  build.sh  gen.sh  include.cc  pstruct.py  pyproject.toml  rknpu-ioctl.h  run.sh  sniff.cc
rknn-sniff/rknn_sniff/: hook.py
rknn-sniff/rknn_sniff.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
